<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">逗音</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="login">登录</string>
    <string name="find_password">忘记密码</string>
    <string name="register">注册</string>
    <string name="title_activity_home">HomeActivity</string>
    <string name="data">数据</string>
    <string name="control">控制</string>
    <string name="setup">我的</string>
    <string name="wendu">温度范围</string>
    <string name="yanqi">开启打氧</string>
    <string name="lvshui">开启滤水</string>
    <string name="weishi">开启喂食</string>
    <string name="title_activity_people">PeopleActivity</string>
    <string name="title_activity_shebei">ShebeiActivity</string>
    <string name="title_activity_shezhi">ShezhiActivity</string>
    <string name="title_activity_data">DataActivity</string>
    <string name="title_activity_tongji">TongjiActivity</string>
    <string name="title_activity_qi_dong">QiDongActivity</string>
    <string name="title_activity_tuo_guan">TuoGuanActivity</string>
    <string name="title_activity_wang_ji1">WangJi1Activity</string>
    <string name="title_activity_about">AboutActivity</string>

</resources>