<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <LinearLayout
        android:id="@+id/fragment_main"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:background="#FFF2F2F2"
        android:orientation="vertical" >
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#ffffff"
        android:orientation="horizontal" >

        <LinearLayout
            android:id="@+id/layout_data"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="vertical" >

            <ImageView
                android:id="@+id/img_data"
                android:layout_marginTop="@dimen/y17"
                android:layout_width="@dimen/x42"
                android:layout_height="@dimen/y42"
                android:background="#00000000"
                android:src="@drawable/data_img_selector" />

            <TextView
                android:id="@+id/text_data"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/data"
                android:textSize="10sp"
                android:layout_marginTop="@dimen/y13"
                android:layout_marginBottom="@dimen/y9"
                android:textColor="@drawable/data_text_selector" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/layout_control"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="vertical" >

            <ImageView
                android:id="@+id/img_control"
                android:layout_marginTop="@dimen/y17"
                android:layout_width="@dimen/x42"
                android:layout_height="@dimen/y42"
                android:background="#00000000"
                android:src="@drawable/control_img_selector" />

            <TextView
                android:id="@+id/text_control"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/y9"
                android:layout_marginTop="@dimen/y13"
                android:text="@string/control"
                android:textColor="@drawable/control_text_selector"
                android:textSize="10sp" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/layout_setup"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="vertical" >

            <ImageView
                android:id="@+id/img_setup"
                android:layout_marginTop="@dimen/y17"
                android:layout_width="@dimen/x42"
                android:layout_height="@dimen/y42"
                android:background="#00000000"
                android:src="@drawable/my_img_selector" />

            <TextView
                android:id="@+id/text_setup"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/setup"
                android:textSize="10sp"
                android:layout_marginTop="@dimen/y13"
                android:layout_marginBottom="@dimen/y9"
                android:textColor="@drawable/my_text_selector" />
        </LinearLayout>
    </LinearLayout>

</LinearLayout>